kubernetes-cluster/iliadis-gke/configuration/prometheus/ingress-prometheus.yaml
# helm install ingress-nginx ingress-nginx --repo https://kubernetes.github.io/ingress-nginx 
# --namespace ingress-nginx --set controller.metrics.enabled=true --set-string controller.podAnnotations."prometheus\.io/scrape"="true" 
# --set-string controller.podAnnotations."prometheus\.io/port"="10254"

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: istio-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  -  http:
      paths:
      - pathType: Prefix
        path: "/prometheus/?(.*)"
        backend:
          service:
            name: prometheus-kube-prometheus-prometheus
            port: 
              number: 9090
      - pathType: Prefix
        path: "/grafana/?(.*)"
        backend:
          service:
            name: prometheus-grafana
            port: 
              number: 80
      - pathType: Prefix
        path: "/jaeger/?(.*)"
        backend:
          service:
            name: tracing
            port: 
              number: 80
      - pathType: Prefix
        path: "/?(.*)"
        backend:
          service:
            name: kiali
            port: 
              number: 20001
